[project]
name = "billg"
version = "0.0.1"
description = "BillG Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.1",
    "fastapi[standard]>=0.115.12",
    "fastapi-utils>=0.8.0",
    "typing-inspect>=0.9.0",
    "openai>=1.75.0",
    "pyhumps>=3.8.0",
    "hvac>=2.3.0",
    "opencv-python>=4.11.0.86",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "tox>=4.25.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
